objects/ortoo_qra__Member_Point_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Action_on_Error_Fixed_Value__c</fullName>
        <label>Action on Error Fixed Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Action_on_Error__c</fullName>
        <label>Action on Error</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Set a value</fullName>
                </value>
                <value>
                    <fullName>Skip this calculation</fullName>
                </value>
                <value>
                    <fullName>Skip this member</fullName>
                </value>
                <value>
                    <fullName>Skip trying to assign this record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_Date_Field__c</fullName>
        <label>Add Points Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_Field_Name__c</fullName>
        <label>Add Points Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_Fixed_Value__c</fullName>
        <label>Add Points Fixed Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_From_Date_Type__c</fullName>
        <label>Add Points From Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_From_Date__c</fullName>
        <label>Add Points From Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_Multiplier__c</fullName>
        <label>Add Points Multiplier</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_Numeric_Value_Field__c</fullName>
        <label>Add Points Numeric Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_Object__c</fullName>
        <label>Add Points Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_To_Date_Type__c</fullName>
        <label>Add Points To Date Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points_To_Date__c</fullName>
        <label>Add Points To Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Add_Points__c</fullName>
        <label>Add Points</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Value</fullName>
                </value>
                <value>
                    <fullName>Field Value</fullName>
                </value>
                <value>
                    <fullName>SUM WHERE (DATE RANGE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
        <relationshipName>Member_Point_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Value_Object_Field__c</fullName>
        <label>Field Value Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Value_Object__c</fullName>
        <label>Field Value Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Calculate_Using_Hours__c</fullName>
        <description>Stores the calculation type for works/business hours when calculating difference between two dates or adding a date and a value. Only applicable if Left1 Value1 and Math V1 to V2 are selected AND one of the Left1 Value1 or Left1 Value2 are date/datetime.</description>
        <inlineHelpText>Select the calculation type for works/business hours when calculating difference between two dates or adding a date and a value. Only applicable if Left1 Value1 and Math V1 to V2 are selected AND one of the Left1 Value1 or Left1 Value2 are date/datetime.</inlineHelpText>
        <label>Left1 Calculate Using Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24/7</fullName>
                </value>
                <value>
                    <fullName>Member&apos;s Working Hours Only</fullName>
                </value>
                <value>
                    <fullName>Case Business Hours Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Math_V1_to_V2__c</fullName>
        <description>Stores the math operator between Left Value 1 and Left Value 2.</description>
        <inlineHelpText>Select the operator between Left Value 1 and Left Value 2. If none is selected, then only Left Value 1 is used in the IF condition&apos;s left hand side.</inlineHelpText>
        <label>Left1 Math V1 to V2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(none)</fullName>
                </value>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Value1_Type__c</fullName>
        <description>Stores the type of value that is stored in corresponding &quot;Value&quot; field: Left1 Value1.</description>
        <inlineHelpText>Select the type of value to use. You can choose from User field, object field, a fixed value or special formula values.</inlineHelpText>
        <label>Left1 Value1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Field</fullName>
                </value>
                <value>
                    <fullName>{Object} Field</fullName>
                </value>
                <value>
                    <fullName>Fixed Value</fullName>
                </value>
                <value>
                    <fullName>NOW</fullName>
                </value>
                <value>
                    <fullName>TODAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Value1__c</fullName>
        <description>Stores the actual value selected by the user, based on value type. It could be a field name (User or Object) or a fixed value.</description>
        <inlineHelpText>Select the value to use for evaluation in the IF expression. You can choose from User Field, Object Field, a Fixed Value.</inlineHelpText>
        <label>Left1 Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Value2_Type__c</fullName>
        <description>Stores the type of value that is stored in corresponding &quot;Value&quot; field: Left1 Value2.</description>
        <inlineHelpText>Select the type of value to use. You can choose from User field, object field, a fixed value or special formula values.</inlineHelpText>
        <label>Left1 Value2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Field</fullName>
                </value>
                <value>
                    <fullName>{Object} Field</fullName>
                </value>
                <value>
                    <fullName>Fixed Value</fullName>
                </value>
                <value>
                    <fullName>NOW</fullName>
                </value>
                <value>
                    <fullName>TODAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Value2__c</fullName>
        <description>Stores the actual value selected by the user, based on value type. It could be a field name (User or Object) or a fixed value.</description>
        <inlineHelpText>Select the value to use for evaluation in the IF expression. You can choose from User Field, Object Field, a Fixed Value.</inlineHelpText>
        <label>Left1 Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Number_of_Times_to_Run_This_Rule__c</fullName>
        <description>This field specifies how many times the point scoring rule will run.</description>
        <inlineHelpText>&apos;Only Once Per User&apos; means the point scoring rule will run once for each matching user. &apos;Once Per each Member Matching Rule record matched to the User&apos; means the rule will run as many times as the number of records a user is matched to by  Matching Rules</inlineHelpText>
        <label>Number of Times to Run This Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Only Once Per User</fullName>
                </value>
                <value>
                    <fullName>Once Per each Member Matching Rule record matched to the User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right1_Calculate_Using_Hours__c</fullName>
        <description>Stores the calculation type for work/business hours when calculating difference between two dates or adding a date and a value. Only applicable if Right1 Value1 and Math V1 to V2 are selected AND one of the Right1 Value1 or Right1 Value2 are date/datetime.</description>
        <inlineHelpText>Select the calculation type for work/business hours when calculating difference between two dates or adding a date and a value. Only applicable if Right1 Value1 and Math V1 to V2 are selected AND one of the Righ1 Value1 or Right1 Value2 are date/datetime.</inlineHelpText>
        <label>Right1 Calculate Using Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24/7</fullName>
                </value>
                <value>
                    <fullName>Member&apos;s Working Hours Only</fullName>
                </value>
                <value>
                    <fullName>Case Business Hours Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right1_Math_V1_to_V2__c</fullName>
        <description>Stores the math operator between Left Value 1 and Left Value 2.</description>
        <inlineHelpText>Select the operator between Left Value 1 and Left Value 2. If none is selected, then only Left Value 1 is used in the IF condition&apos;s left hand side.</inlineHelpText>
        <label>Right1 Math V1 to V2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(none)</fullName>
                </value>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right1_Value1_Type__c</fullName>
        <description>Stores the type of value that is stored in corresponding &quot;Value&quot; field: Right1 Value1.</description>
        <inlineHelpText>Select the type of value to use. You can choose from User field, object field, a fixed value or special formula values.</inlineHelpText>
        <label>Right1 Value1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Field</fullName>
                </value>
                <value>
                    <fullName>{Object} Field</fullName>
                </value>
                <value>
                    <fullName>Fixed Value</fullName>
                </value>
                <value>
                    <fullName>NOW</fullName>
                </value>
                <value>
                    <fullName>TODAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right1_Value1__c</fullName>
        <description>Stores the actual value selected by the user, based on value type. It could be a field name (User or Object) or a fixed value.</description>
        <inlineHelpText>Select the value to use for evaluation in the IF expression. You can choose from User Field, Object Field, a Fixed Value.</inlineHelpText>
        <label>Right1 Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right1_Value2_Type__c</fullName>
        <description>Stores the type of value that is stored in corresponding &quot;Value&quot; field: Left1 Value1.</description>
        <inlineHelpText>Select the type of value to use. You can choose from User field, object field, a fixed value or special formula values.</inlineHelpText>
        <label>Right1 Value2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Field</fullName>
                </value>
                <value>
                    <fullName>{Object} Field</fullName>
                </value>
                <value>
                    <fullName>Fixed Value</fullName>
                </value>
                <value>
                    <fullName>NOW</fullName>
                </value>
                <value>
                    <fullName>TODAY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right1_Value2__c</fullName>
        <description>Stores the actual value selected by the user, based on value type. It could be a field name (User or Object) or a fixed value.</description>
        <inlineHelpText>Select the value to use for evaluation in the IF expression. You can choose from User Field, Object Field, a Fixed Value.</inlineHelpText>
        <label>Right1 Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QA Member Point Criteria</label>
    <nameField>
        <label>Member Point Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Member Point Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>